--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nodedemo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "parth",
   "license": "ISC",
