--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "parth",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
